--- a/springAPI/src/main/resources/application.properties
+++ b/springAPI/src/main/resources/application.properties
@@ -6,7 +6,12 @@ spring.datasource.username=treina
 spring.datasource.password=treina
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
+
+
