--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "classnames": "^2.5.1",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-responsive": "^10.0.0",
+    "react-router-dom": "^7.1.5",
+    "react-toggle": "^4.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
