--- a/springAPI/src/main/resources/application.properties
+++ b/springAPI/src/main/resources/application.properties
@@ -14,4 +14,10 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 
+spring.web.cors.allowed-origins=*
+spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.web.cors.allowed-headers=*
+spring.web.cors.allow-credentials=true
+
+
 
