--- a/springAPI/src/main/resources/application.properties
+++ b/springAPI/src/main/resources/application.properties
@@ -8,10 +8,10 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 
 spring.web.cors.allowed-origins=*
