--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^7.1.5",
     "react-toggle": "^4.1.3"
